--- a/MyApplication/app/src/main/res/layout/fragment_admin_edit_ticket.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_admin_edit_ticket.xml
@@ -332,7 +332,9 @@
             app:hintTextColor="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idLayoutPricePriceCategoryVIP">
+            app:layout_constraintTop_toBottomOf="@+id/idLayoutPricePriceCategoryVIP"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="20dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/idEdtImageUrl"
@@ -343,40 +345,6 @@
                 android:textColor="@color/white" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/idLayoutImageUrl"
-            >
-            <CheckBox
-                android:id="@+id/checkBoxNotification"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Doriti ca utilizatorii sa primeasca notificare in legatura cu acest ticket" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/idBtnEditTicket"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginVertical="20dp"
-            android:text="Adaugă Ticket"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textAllCaps="false"
-            android:background="@drawable/rounded_button"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
